add nord theme for kitty

--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -1,5 +1,6 @@
 font_family MesloLGS NF
 font_size 15.0
+text_fg_override_threshold 40
 shell /bin/zsh -l -c /opt/homebrew/bin/tmux
 cursor_blink_interval 0
 enable_audio_bell no
