--- a/.aerospace.toml
+++ b/.aerospace.toml
@@ -1,6 +1,3 @@
-# Place a copy of this config to ~/.aerospace.toml
-# After that, you can edit ~/.aerospace.toml to your liking
-
 # You can use it to add commands that run after login to macOS user session.
 # 'start-at-login' needs to be 'true' for 'after-login-command' to work
 # Available commands: https://nikitabobko.github.io/AeroSpace/commands
@@ -18,9 +15,6 @@ start-at-login = false
 enable-normalization-flatten-containers = true
 enable-normalization-opposite-orientation-for-nested-containers = true
 
-# See: https://nikitabobko.github.io/AeroSpace/guide#layouts
-# The 'accordion-padding' specifies the size of accordion padding
-# You can set 0 to disable the padding feature
 accordion-padding = 0
 
 # Possible values: tiles|accordion
@@ -42,11 +36,6 @@ on-focused-monitor-changed = ['move-mouse monitor-lazy-center']
 # Useful if you don't use this macOS feature, but accidentally hit cmd-h or cmd-alt-h key
 # Also see: https://nikitabobko.github.io/AeroSpace/goodness#disable-hide-app
 automatically-unhide-macos-hidden-apps = false
-
-# Possible values: (qwerty|dvorak)
-# See https://nikitabobko.github.io/AeroSpace/guide#key-mapping
-[key-mapping]
-preset = 'qwerty'
 
 # Gaps between windows (inner-*) and between monitor edges (outer-*).
 # Possible values:
@@ -114,15 +103,6 @@ alt-shift-minus = 'resize smart -50'
 alt-shift-equal = 'resize smart +50'
 
 # See: https://nikitabobko.github.io/AeroSpace/commands#workspace
-alt-1 = 'workspace 1'
-alt-2 = 'workspace 2'
-alt-3 = 'workspace 3'
-alt-4 = 'workspace 4'
-alt-5 = 'workspace 5'
-alt-6 = 'workspace 6'
-alt-7 = 'workspace 7'
-alt-8 = 'workspace 8'
-alt-9 = 'workspace 9'
 alt-a = 'workspace A' # In your config, you can drop workspace bindings that you don't need
 alt-b = 'workspace B'
 alt-c = 'workspace C'
@@ -147,15 +127,6 @@ alt-y = 'workspace Y'
 alt-z = 'workspace Z'
 
 # See: https://nikitabobko.github.io/AeroSpace/commands#move-node-to-workspace
-alt-shift-1 = 'move-node-to-workspace 1'
-alt-shift-2 = 'move-node-to-workspace 2'
-alt-shift-3 = 'move-node-to-workspace 3'
-alt-shift-4 = 'move-node-to-workspace 4'
-alt-shift-5 = 'move-node-to-workspace 5'
-alt-shift-6 = 'move-node-to-workspace 6'
-alt-shift-7 = 'move-node-to-workspace 7'
-alt-shift-8 = 'move-node-to-workspace 8'
-alt-shift-9 = 'move-node-to-workspace 9'
 alt-shift-a = 'move-node-to-workspace A'
 alt-shift-b = 'move-node-to-workspace B'
 alt-shift-c = 'move-node-to-workspace C'
@@ -207,11 +178,11 @@ alt-shift-l = ['join-with right', 'mode main']
 
 ## Browsers
 [[on-window-detected]]
-if.window-title-regex-substring = ' - Rok$'
+if.window-title-regex-substring = 'Chrome Personal'
 run = 'move-node-to-workspace P'
 
 [[on-window-detected]]
-if.window-title-regex-substring = ' - Rok (Work)$'
+if.window-title-regex-substring = 'Chrome Work'
 run = 'move-node-to-workspace K'
 
 [[on-window-detected]]
@@ -231,12 +202,12 @@ run = 'move-node-to-workspace T'
 ## AI
 [[on-window-detected]]
 if.app-id = 'com.openai.chat'
-run = 'move-node-to-workspace G'
+run = ['layout floating', 'move-node-to-workspace G']
 
 ## Notes
 [[on-window-detected]]
 if.app-id = 'md.obsidian'
-run = 'move-node-to-workspace L'
+run = 'move-node-to-workspace N'
 
 ## Music
 [[on-window-detected]]
@@ -256,7 +227,7 @@ run = 'move-node-to-workspace R'
 ## Signal
 [[on-window-detected]]
 if.app-id = 'com.tinyspeck.slackmacgap'
-run = 'move-node-to-workspace W'
+run = ['layout floating', 'move-node-to-workspace W']
 
 ## Zoom
 [[on-window-detected]]
@@ -280,18 +251,20 @@ run = 'move-node-to-workspace C'
 # Home Monitor Layout
 # left 'DELL P2720DC (1)'
 # center 'DELL P2720DC (2)'
-# right 'Built-in Retina Display'
+# right 'built-in'
 
 # Office Monitor Layour
 # right DELL 4K-TBD
-# left 'Built-in Retina Display'
+# left 'built-in'
 
 [workspace-to-monitor-force-assignment]
-C = 'Built-in Retina Display'
-T = ['DELL P2720DC \(1\)', 'Built-in Retina Display']
+C = 'built-in'
+T = ['DELL P2720DC \(1\)', 'built-in']
 I = 'DELL P2720DC \(2\)'
 K = 'DELL P2720DC \(2\)'
 P = 'DELL P2720DC \(2\)'
 A = 'DELL P2720DC \(1\)'
 G = 'DELL P2720DC \(1\)'
-S = 'Built-in Retina Display'
+N = 'DELL P2720DC \(1\)'
+S = 'built-in'
+Z = 'built-in'
